@@ -64,7 +64,6 @@
 
 	/* Function Prototypes: */
 		void SetupHardware(void);
-		void ProcessNextSample(void);
 
 		void EVENT_USB_Device_Connect(void);
 		void EVENT_USB_Device_Disconnect(void);
